[gd_scene load_steps=18 format=3 uid="uid://du810krjernvh"]

[ext_resource type="Script" uid="uid://csywm5ogyueew" path="res://scripts/climber.gd" id="1_7e176"]
[ext_resource type="Shape2D" uid="uid://cr7ppqcms2hw4" path="res://colliders/body.tres" id="2_ygfqx"]
[ext_resource type="Shape2D" uid="uid://gnqvkohl8wu4" path="res://colliders/arm.tres" id="3_3nhoh"]
[ext_resource type="PackedScene" uid="uid://cathck1hstnnf" path="res://scenes/InterLimb.tscn" id="4_7aipt"]
[ext_resource type="Script" uid="uid://e4xbb806qvh2" path="res://scripts/monke_raycast.gd" id="4_nwbdq"]
[ext_resource type="PackedScene" uid="uid://chsdkprww0adx" path="res://scenes/grabber.tscn" id="5_3nhoh"]
[ext_resource type="Script" uid="uid://npu3np1aken3" path="res://scripts/body_part.gd" id="5_nwbdq"]
[ext_resource type="Script" uid="uid://n04gwns6q2lp" path="res://scripts/ai_climb_controller.gd" id="7_7aipt"]
[ext_resource type="Texture2D" uid="uid://4q335xxs2p" path="res://icon.svg" id="9_7aipt"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kce74"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_7aipt"]
material = SubResource("StandardMaterial3D_kce74")
radius = 10.096
height = 24.737

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7aipt"]
radius = 4.0
height = 10.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_qjkbj"]
radius = 4.0
height = 10.0

[sub_resource type="BoxMesh" id="BoxMesh_kce74"]
size = Vector3(12, 3, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_emysf"]
size = Vector2(9, 3)

[sub_resource type="BoxMesh" id="BoxMesh_7aipt"]
size = Vector3(10, 3, 1)

[sub_resource type="LabelSettings" id="LabelSettings_7aipt"]
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[node name="Climber" type="Node2D"]
script = ExtResource("1_7e176")

[node name="Torso" type="RigidBody2D" parent="."]
collision_layer = 0
collision_mask = 3
mass = 50.0
script = ExtResource("5_nwbdq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torso"]
shape = ExtResource("2_ygfqx")

[node name="Lshoulder" type="PinJoint2D" parent="Torso"]
position = Vector2(-7, -9)
node_a = NodePath("..")
node_b = NodePath("../../Lupperarm")
angular_limit_enabled = true
angular_limit_lower = -1.7453293
angular_limit_upper = 1.7453293

[node name="Rshoulder" type="PinJoint2D" parent="Torso"]
position = Vector2(7.465, -9)
node_a = NodePath("..")
node_b = NodePath("../../Rupperarm")

[node name="Lhip" type="PinJoint2D" parent="Torso"]
position = Vector2(-6, 9)
node_a = NodePath("..")
node_b = NodePath("../../Lthigh")
angular_limit_lower = 1.0471976
angular_limit_upper = 2.8797932
motor_enabled = true
motor_target_velocity = 2.5968754

[node name="Rhip" type="PinJoint2D" parent="Torso"]
position = Vector2(6, 9)
node_a = NodePath("..")
node_b = NodePath("../../Rthigh")
angular_limit_lower = 0.17453292
angular_limit_upper = 2.0071287
motor_enabled = true
motor_target_velocity = -3.4906585

[node name="Camera2D" type="Camera2D" parent="Torso"]
enabled = false
zoom = Vector2(4, 4)

[node name="RemoteTransform2D2" type="RemoteTransform2D" parent="Torso"]
remote_path = NodePath("../../AIController2D/NodeAbove")
update_rotation = false
update_scale = false

[node name="MeshInstance2D" type="MeshInstance2D" parent="Torso"]
mesh = SubResource("CapsuleMesh_7aipt")

[node name="HeadColli" type="CollisionShape2D" parent="Torso"]
position = Vector2(0, -15.05)
shape = SubResource("CapsuleShape2D_7aipt")

[node name="HeadMesh" type="MeshInstance2D" parent="Torso"]
position = Vector2(0, -14.925)
mesh = SubResource("CapsuleMesh_qjkbj")

[node name="Lthigh" parent="." node_paths=PackedStringArray("next_limb") instance=ExtResource("4_7aipt")]
modulate = Color(0, 0.5137255, 1, 1)
position = Vector2(-6, 12.585)
rotation = 1.5707964
mass = 10.0
next_limb = NodePath("../Lcalf")

[node name="Rthigh" parent="." node_paths=PackedStringArray("next_limb") instance=ExtResource("4_7aipt")]
modulate = Color(1, 0.29803923, 0.22745098, 1)
position = Vector2(6, 12.585)
rotation = 1.5707964
mass = 10.0
next_limb = NodePath("../Rcalf")

[node name="Lupperarm" parent="." node_paths=PackedStringArray("next_limb") instance=ExtResource("4_7aipt")]
modulate = Color(1, 0.27450982, 0.28235295, 1)
position = Vector2(-12, -9)
mass = 3.0
gravity_scale = 0.0
next_limb = NodePath("../Lforearm")
joint_displacement = -3.415

[node name="Rupperarm" parent="." node_paths=PackedStringArray("next_limb") instance=ExtResource("4_7aipt")]
modulate = Color(1, 0.16470589, 1, 1)
position = Vector2(12, -9)
mass = 3.0
gravity_scale = 0.0
next_limb = NodePath("../Rforearm")

[node name="Lforearm" type="RigidBody2D" parent="."]
position = Vector2(-22, -9)
collision_layer = 0
collision_mask = 3
mass = 2.3
gravity_scale = 0.0
script = ExtResource("5_nwbdq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lforearm"]
shape = ExtResource("3_3nhoh")

[node name="LeftHand" parent="Lforearm" instance=ExtResource("5_3nhoh")]
position = Vector2(-6, 0)

[node name="MeshInstance2D" type="MeshInstance2D" parent="Lforearm"]
mesh = SubResource("BoxMesh_kce74")

[node name="Rforearm" type="RigidBody2D" parent="."]
position = Vector2(21.65, -9)
collision_layer = 0
collision_mask = 3
mass = 2.3
script = ExtResource("5_nwbdq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rforearm"]
shape = ExtResource("3_3nhoh")

[node name="MeshInstance2D2" type="MeshInstance2D" parent="Rforearm"]
mesh = SubResource("BoxMesh_kce74")

[node name="RightHand" parent="Rforearm" instance=ExtResource("5_3nhoh")]
position = Vector2(7, 0)

[node name="Lcalf" type="RigidBody2D" parent="."]
position = Vector2(-6, 19.615)
rotation = 1.5707964
collision_layer = 0
collision_mask = 3
mass = 5.9
script = ExtResource("5_nwbdq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lcalf"]
shape = SubResource("RectangleShape2D_emysf")

[node name="LeftFoot" parent="Lcalf" instance=ExtResource("5_3nhoh")]
position = Vector2(7, 0)

[node name="MeshInstance2D" type="MeshInstance2D" parent="Lcalf"]
mesh = SubResource("BoxMesh_7aipt")

[node name="Rcalf" type="RigidBody2D" parent="."]
position = Vector2(6, 19.615)
rotation = 1.5707964
collision_layer = 0
collision_mask = 3
mass = 5.9
script = ExtResource("5_nwbdq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rcalf"]
shape = SubResource("RectangleShape2D_emysf")

[node name="RightFoot" parent="Rcalf" instance=ExtResource("5_3nhoh")]
position = Vector2(7, 0)

[node name="MeshInstance2D" type="MeshInstance2D" parent="Rcalf"]
mesh = SubResource("BoxMesh_7aipt")

[node name="AIController2D" type="Node2D" parent="." groups=["AGENT"]]
script = ExtResource("7_7aipt")
control_mode = 2

[node name="NodeAbove" type="Node2D" parent="AIController2D"]

[node name="RaycastBody" type="Node2D" parent="AIController2D/NodeAbove"]
rotation = -1.5707964
script = ExtResource("4_nwbdq")
n_rays = 20.0
debug_draw = false
metadata/_custom_type_script = "uid://c3ox4b85c5hd1"

[node name="RaycastLeft" type="Node2D" parent="AIController2D/NodeAbove"]
position = Vector2(-100, -80)
script = ExtResource("4_nwbdq")
n_rays = 10.0
cone_width = 120.0
metadata/_custom_type_script = "uid://c3ox4b85c5hd1"

[node name="RaycastRight" type="Node2D" parent="AIController2D/NodeAbove"]
position = Vector2(100, -80)
rotation = 3.1415927
script = ExtResource("4_nwbdq")
n_rays = 10.0
cone_width = 120.0
metadata/_custom_type_script = "uid://c3ox4b85c5hd1"

[node name="Sprite2D" type="Sprite2D" parent="AIController2D/NodeAbove"]
visible = false
position = Vector2(-3.8146973e-06, -82)
scale = Vector2(0.1171875, 0.15625)
texture = ExtResource("9_7aipt")

[node name="Label" type="Label" parent="AIController2D/NodeAbove"]
offset_left = -10.0
offset_top = -29.0
offset_right = 30.0
offset_bottom = -6.0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 20
label_settings = SubResource("LabelSettings_7aipt")
